--- a/index.html
+++ b/index.html
@@ -23,7 +23,24 @@
 </picture>
 
 <main>
-  <div class="accordion-container"></div>
+  <div class="accordion-container">
+    <div class="card-title">
+      <img src="assets/images/icon-star.svg" alt="" srcset="">
+      <h1>FAQs</h1>
+    </div>
+    <div class="accordion-card">
+      <div class="a-header">
+        <h3 class="question"> What is Frontend Mentor, and how will it help me? </h3>
+        <img src="assets/images/icon-plus.svg" alt="" class="plus-icon">
+
+      </div>
+      <p class="answer">
+        Frontend Mentor offers realistic coding challenges to help developers improve their 
+        frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
+        all levels and ideal for portfolio building.
+      </p>
+    </div>
+  </div>
 </main>
   
 
@@ -33,4 +50,5 @@
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
 </body>
+<script src="app.js"></script>
 </html>
