--- a/index.html
+++ b/index.html
@@ -40,6 +40,46 @@
         all levels and ideal for portfolio building.
       </p>
     </div>
+    <hr>
+   
+    <div class="accordion-card">
+      <div class="a-header">
+        <h3 class="question"> Is Frontend Mentor free?</h3>
+        <img src="assets/images/icon-plus.svg" alt="" class="plus-icon">
+
+      </div>
+      <p class="answer">
+        Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
+        option providing access to a range of projects suitable for all skill levels.
+      
+      </p>
+    </div>
+    <hr>
+    <div class="accordion-card">
+      <div class="a-header">
+        <h3 class="question">Can I use Frontend Mentor projects in my portfolio?
+        </h3>
+        <img src="assets/images/icon-plus.svg" alt="" class="plus-icon">
+
+      </div>
+      <p class="answer">
+        Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
+        way to showcase your skills to potential employers!
+      </p>
+    </div>
+    <hr>
+    <div class="accordion-card">
+      <div class="a-header">
+        <h3 class="question"> How can I get help if I'm stuck on a Frontend Mentor challenge? </h3>
+        <img src="assets/images/icon-plus.svg" alt="" class="plus-icon">
+
+      </div>
+      <p class="answer">
+        The best place to get help is inside Frontend Mentor's Discord community. There's a help 
+        channel where you can ask questions and seek support from other community members.
+      </p>
+    </div>
+    <hr>
   </div>
 </main>
   
