--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | FAQ accordion</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  
 </head>
 <body>
 <picture>
@@ -70,7 +70,7 @@
     <hr>
     <div class="accordion-card">
       <div class="a-header">
-        <h3 class="question"> How can I get help if I'm stuck on a Frontend Mentor challenge? </h3>
+        <h3 class="question"> How can I get help if I'm stuck on a  challenge? </h3>
         <img src="assets/images/icon-plus.svg" alt="" class="plus-icon">
 
       </div>
